[project]
name = "comfyui-easycontrol-ksamplercompat"
description = "KSampler-compatible Anima EasyControl image conditioning for ComfyUI. A single model-patch node (MODEL + VAE + IMAGE -> MODEL) that feeds a reference image into the Anima DiT's frozen extended self-attention stream and returns a patched MODEL for the stock KSampler — no dedicated sampler node. Reimplements anima_lora's EasyControl inference path against ComfyUI's native Anima/Cosmos DiT backbone (split q/k/v projections). EasyControl checkpoints go in models/loras/. Typical use: grayscale/lineart -> color (colorization)."
version = "0.1.3"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/ComfyUI-EasyControl-KSamplerCompat"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima EasyControl (KSampler)"
Icon = ""
